Agregando mas doc a las rutas
