# d1/app/Http/Controllers/ClientesController.php
@@ -9,8 +9,11 @@ use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Validator;
 use App\Clientes;
 
-
-
+/**
+* @OA\Info(title="API REST IDESA - API para Clientes", version="1.0")
+*
+* @OA\Server(url="https://desafio.idesa.pyaeveapps.com/v2/public")
+*/
 class ClientesController extends Controller
 {
     /**
@@ -31,7 +34,7 @@ class ClientesController extends Controller
     *         response="200",
     *         description="Si autentica devuelve un JSON con el ACCESS TOKEN .",
     * @OA\JsonContent(
-    *         @OA\Examples(example="result",{"status":"ok","message":"Auteticacion de Usuario validado con Exito","data":{"total":1,"detail":{"id":1,"nombres":"IDESA","correo":"desafio@idesa.com.py","access_token":"3|LdDMJM9HFVi8hqfkKmlP3q7rPUejd4n6Wx1aldWS","type_token":"Bearer","value_token":"Bearer 3|LdDMJM9HFVi8hqfkKmlP3q7rPUejd4n6Wx1aldWS","expiration_token":"2800"}}}, summary="Devuelve un Objeto JSON con la lista de Clientes"),
+    *         @OA\Examples(example="result",{"status":"ok","message":"Auteticacion de Usuario validado con Exito","data":{"total":1,"detail":{"id":1,"nombres":"IDESA","correo":"desafio@idesa.com.py","access_token":"3|LdDMJM9HFVi8hqfkKmlP3q7rPUejd4n6Wx1aldWS","type_token":"Bearer","value_token":"Bearer 3|LdDMJM9HFVi8hqfkKmlP3q7rPUejd4n6Wx1aldWS","expiration_token":"2800"}}}, summary="Devuelve un Objeto JSON con la lista de "),
     *            
     *         )
     *     ),
@@ -60,11 +63,73 @@ class ClientesController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
+    * @OA\Post(
+    *     path="/api/clientes",
+    *     summary="Crea un Cliente ",
+    *     @OA\Parameter(
+    *         description="Authentication Bearer [token] esto va en la cabecera ",
+    *         in="path",
+    *         name="Authentication",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Authentication Bearer [token]", summary="tokem"),
+    *       
+    *     ),
+    *       @OA\Parameter(
+    *         description="Nombre del Cliente ",
+    *         in="path",
+    *         name="nombres",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Juan", summary="Nombre del cliente"),
+    *       
+    *     ),
+    *  @OA\Parameter(
+    *         description="Apellido del Cliente ",
+    *         in="path",
+    *         name="apellidos",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Perez", summary="Apelloido del cliente"),
+    *       
+    *     ),
+    *  @OA\Parameter(
+    *         description="email del Cliente ",
+    *         in="path",
+    *         name="correo",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Juan@gmail.com", summary="email del cliente"),
+    *       
+    *     ),
+  @OA\Parameter(
+    *         description="Nombre del Cliente ",
+    *         in="path",
+    *         name="domicilio",
+    *         required=false,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Juan ]", summary="domicilio del cliente"),
+    *       
+    *     ),
+    *     
+    *     @OA\Response(
+    *         response="200",
+    *         description="Si autentica devuelve un JSON con el ACCESS TOKEN .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result",{"status":"ok","message":"Cliente nuevo creado con Exito!!","data":{"total":1,"detail":{"nombres":"Fabio","apellidos":"Mendoza","correo":"fabio.mendoza@gmail.com","domicilio":"en algun lugar del meta verso","updated_at":"2023-01-29T22:33:59.000000Z","created_at":"2023-01-29T22:33:59.000000Z","id":123467}}}, summary="Devuelve un Objeto JSON con la lista de "),
+    *            
+    *         )
+    *     ),
+    * @OA\Response(
+    *         response="401",
+    *         description="Devuelve un JSON con el error .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result", {"status":"Unauthorized","message":"No tiene autorizacion para consumir la API"}, summary="Devuelve un Objeto JSON com el mensaje de error"),
+    *            
+    *         )
+    *     )
+    * )
+    */
     public function store(Request $request)
     {
       
@@ -126,11 +191,45 @@ class ClientesController extends Controller
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+    * @OA\Get(
+    *     path="/api/clientes/:id",
+    *     summary="Visualiza Detalle de un Cliente ",
+    *     @OA\Parameter(
+    *         description="Authentication Bearer [token] esto va en la cabecera ",
+    *         in="path",
+    *         name="Authentication",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Authentication Bearer [token]", summary="tokem"),
+    *       
+    *     ),
+    *       @OA\Parameter(
+    *         description="Nombre del Clientye ",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         @OA\Schema(type="int"),
+    *         @OA\Examples(example="int", value="123456", summary="Nombre del cliente"),
+    *       
+    *     ),
+    *     @OA\Response(
+    *         response="200",
+    *         description="Si autentica devuelve un JSON con los datos del cliente .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result",{"status":"ok","message":"Detalle del Cliente ","data":{"total":1,"detail":{"id":123456,"nombres":"Felix","apellidos":"Estigarribia","correo":"felix.estigarribia@gmail,com","domicilio":"En al gun lugar del Metaverso","created_at":null,"updated_at":"2023-01-27T04:07:36.000000Z","deleted_at":null}}}, summary="Devuelve un Objeto JSON con la lista de "),
+    *            
+    *         )
+    *     ),
+    * @OA\Response(
+    *         response="401",
+    *         description="Devuelve un JSON con el error .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result", {"status":"Unauthorized","message":"No tiene autorizacion para consumir la API"}, summary="Devuelve un Objeto JSON com el mensaje de error"),
+    *            
+    *         )
+    *     )
+    * )
+    */
     public function show($id)
     {
         try {
@@ -157,14 +256,48 @@ class ClientesController extends Controller
      
         
     }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+/**
+    * @OA\Put(
+    *     path="/api/clientes",
+    *     summary="Modifica/Actualiza datos del Cliente ",
+    *     @OA\Parameter(
+    *         description="Authentication Bearer [token] esto va en la cabecera ",
+    *         in="path",
+    *         name="Authentication",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Authentication Bearer [token]", summary="email del usuario"),
+    *       
+    *     ),
+    *  *     @OA\Parameter(
+    *         description="Authentication Bearer [token] esto va en la cabecera ",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         @OA\Schema(type="int"),
+    *         @OA\Examples(example="int", value="12345678", summary="Id del Cliente que se desea modificar"),
+    *       
+    *     ),
+   
+    *     
+    *     @OA\Response(
+    *         response="200",
+    *         description="Si autentica devuelve un JSON .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result",{"status":"ok","message":"Cliente modificado con Exito"}, summary="Devukleve un mensaje de modificacion con exiro"),
+    *            
+    *         )
+    *     ),
+    * @OA\Response(
+    *         response="401",
+    *         description="Devuelve un JSON con el error .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result", {"status":"Unauthorized","message":"No tiene autorizacion para consumir la API"}, summary="Devuelve un Objeto JSON com el mensaje de error"),
+    *            
+    *         )
+    *     )
+    * )
+    */
     public function update(Request $request, $id)
     {
        
@@ -212,11 +345,47 @@ class ClientesController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
+    * @OA\Delete(
+    *     path="/api/clientes/:id",
+    *     summary="Borra un Cliente ",
+    *     @OA\Parameter(
+    *         description="Authentication Bearer [token] esto va en la cabecera ",
+    *         in="path",
+    *         name="Authentication",
+    *         required=true,
+    *         @OA\Schema(type="string"),
+    *         @OA\Examples(example="string", value="Authentication Bearer [token]", summary="email del usuario"),
+    *       
+    *     ),
+    *  *     @OA\Parameter(
+    *         description="Id del Cliente a borrar",
+    *         in="path",
+    *         name="id",
+    *         required=true,
+    *         @OA\Schema(type="int"),
+    *         @OA\Examples(example="int", value="12345678", summary="Id del Cliente a borrar"),
+    *       
+    *     ),
+   
+    *     
+    *     @OA\Response(
+    *         response="200",
+    *         description="Si autentica devuelve un JSON .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result",{"status":"ok","message":"Cliente borrado con Exito"}, summary="Devukleve un mensaje de modificacion con exiro"),
+    *            
+    *         )
+    *     ),
+    * @OA\Response(
+    *         response="401",
+    *         description="Devuelve un JSON con el error .",
+    * @OA\JsonContent(
+    *         @OA\Examples(example="result", {"status":"Unauthorized","message":"No tiene autorizacion para consumir la API"}, summary="Devuelve un Objeto JSON com el mensaje de error"),
+    *            
+    *         )
+    *     )
+    * )
+    */
     public function destroy($cliente)
     {   //tratamos de borrar con softdeleting
         try {
